# Bad_NES_Emulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  config.h.in
include/: Application.hpp  Cartridge.hpp  Common.hpp  Cpu6502.hpp  File.hpp  Memory.hpp  Ppu2C02.hpp  System.hpp
include/Errors/: ApiErrors.hpp  ErrorCodes.hpp
include/File/: ApiFile.hpp  StdFile.hpp
include/Logger/: ApiLogger.hpp
include/Mappers/: Mapper.hpp  Mapper_000.hpp
src/: Application.cpp  Cartridge.cpp  Common.cpp  Cpu6502.cpp  File.cpp  Main.cpp  Mapper.cpp  Memory.cpp  Ppu2C02.cpp  System.cpp
src/Errors/: ApiErrors.hpp  ErrorCodes.hpp  Errors.cpp
src/File/: ApiFile.hpp  File.cpp  StdFile.cpp  StdFile.hpp
src/Logger/: ApiLogger.hpp  Logger.cpp
src/Mappers/: Mapper.cpp  Mapper_000.cpp
src/Platform/Glfw/: GlfwWindow.cpp  GlfwWindow.hpp
src/Window/: KeyCodes.hpp  Window.hpp
